# dwost

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
assets/: __init__.py
diff_wost/: __init__.py
diff_wost/core/: __init__.py  distr.py  fwd.py  math.py
diff_wost/render/: __init__.py  bessel.py  greens_fn.py  greens_fn_3d.py  interaction.py  yukawa_fn.py  yukawa_fn_3d.py
diff_wost/shapes/: __init__.py  bvh.py  bvh3d.py  line_segment.py  mesh.py  plane.py  point.py  polyline.py  primitive.py  silhouette_edge.py  silhouette_vertex.py  snch.py  snch3d.py  triangle.py
diff_wost/solvers/: __init__.py  solver.py  wos.py  wos_3d.py  wost.py  wost_3d.py  wost_grad.py  wost_grad_3d.py
diff_wost/utils/: __init__.py  image_io.py  obj_loader.py  plot.py  stats.py
examples/example_2d/: run.py  samples.txt  scene.py  trace.py
examples/example_3d/: run.py  scene.py  trace.py
include/: bounding_volume.h  bvh.h  fwd.h  primitive.h  silhouette_edge.h  silhouette_vertex.h  snch.h
src/: diff_wost.cpp
src/python/: bind_bounding_volume.cpp  bind_bvh.cpp  bind_silhouette.cpp  bind_snch.cpp
